third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/enum_overflows.stderr
error: discriminant overflow on value after 18446744073709551615
  --> tests/ui/enum_overflows.rs:13:9
   |
13 |         F,
   |         ^
